ModalDialog overflow styles fixed

--- a/src/common/ModalDialog/styles.less
+++ b/src/common/ModalDialog/styles.less
@@ -1,104 +1,117 @@
 .modal-container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: var(--color-backgrounddark40);
 
     .modal-dialog-container {
-        position: relative;
-        margin: auto;
-        padding: 1rem;
+        flex: none;
+        display: flex;
+        flex-direction: column;
+        max-width: 80%;
+        max-height: 80%;
         background-color: var(--color-surfacelighter);
 
-        .close-button-container {
+        .header-container {
+            flex: none;
+            align-self: stretch;
             display: flex;
             flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            top: .2rem;
-            right: .2rem;
-            width: 2rem;
-            height: 2rem;
-            padding: 0.5rem;
+            justify-content: flex-end;
+            padding: 0.2rem 0.2rem 0;
 
-            .icon {
+            .title-container {
+                flex: 1;
+                align-self: center;
+                max-height: 2.4em;
+                padding: 0 0.5rem;
+                font-size: 1.2rem;
+                color: var(--color-backgrounddarker);
+            }
+
+            .close-button-container {
                 flex: none;
-                display: block;
-                width: 100%;
-                height: 100%;
-                fill: var(--color-surfacedark);
-            }
-
-            &:hover {
-                background-color: var(--color-surfacelight);
+                align-self: flex-start;
+                width: 2rem;
+                height: 2rem;
+                padding: 0.5rem;
 
                 .icon {
-                    fill: var(--color-signal2);
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    fill: var(--color-surfacedark);
+                }
+
+                &:hover, &:focus {
+                    background-color: var(--color-surfacelight);
+
+                    .icon {
+                        fill: var(--color-surfacedarker);
+                    }
+                }
+
+                &:focus {
+                    outline-color: var(--color-surfacedark);
                 }
             }
-
-            &:focus {
-                .icon {
-                    fill: var(--color-signal2);
-                }
-            }
-        }
-
-        h1 {
-            margin-bottom: 1rem;
-            font-size: 1.2rem;
         }
 
         .modal-dialog-content {
-            padding: 1rem;
+            flex: 1;
+            align-self: stretch;
+            margin: 1rem 0.5rem;
+            padding: 0 0.5rem;
+            overflow-y: auto;
 
-            >:not(:first-child) {
+            .buttons-container {
                 margin-top: 1rem;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
             }
-        }
-
-        .modal-dialog-buttons {
-            margin: 1rem;
-            display: flex;
-            flex-direction: row;
         }
     }
 }
 
 .action-button {
+    flex: 1;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    flex: 1 0 0;
     padding: 1rem;
-    text-align: center;
-    color: var(--color-surfacelighter);
     background-color: var(--color-signal5);
+
+    &:focus {
+        outline-width: calc(1.5 * var(--focus-outline-size));
+        outline-color: var(--color-surfacelighter);
+        outline-offset: calc(-2 * var(--focus-outline-size));
+    }
 
     &:hover {
         filter: brightness(1.2);
     }
 
-    &:focus {
-        outline: calc(1.5 * var(--focus-outline-size)) solid var(--color-surfacelighter);
-        outline-offset: calc(-2 * var(--focus-outline-size));
-    }
-
-    &:global(.disabled) {
-        color: var(--color-surfacedarker);
-        background-color: var(--color-surfacedark);
+    &:not(:last-child) {
+        margin-right: 1rem;
     }
 
     .icon {
         flex: none;
-        width: 1rem;
-        height: 1rem;
+        width: 1.2rem;
+        height: 1.2rem;
         margin-right: .5rem;
         fill: var(--color-surfacelighter);
     }
 
-    &:not(:last-child) {
-        margin-right: 2rem;
+    .label {
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto;
+        max-height: 3.6em;
+        font-size: 1.1rem;
+        text-align: center;
+        color: var(--color-surfacelighter);
     }
 }
